--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-flask
-flask-sqlalchemy
-flask-bcrypt
-flask-login
-flask-cors
-flask-migrate
+Flask
+Flask-SQLAlchemy
+Flask-Bcrypt
+Flask-Login
+Flask-Migrate
+Flask-Cors
 numpy
 pandas
 requests
 psycopg2-binary
 python-dotenv
 gunicorn
+scikit-learn
+joblib
+matplotlib
