--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,12 @@ Flask
 Flask-SQLAlchemy
 Flask-Bcrypt
 Flask-Login
-Flask-Migrate
 Flask-Cors
-numpy
 pandas
+numpy
+scikit-learn
 requests
+SQLAlchemy
+gunicorn
 psycopg2-binary
 python-dotenv
-gunicorn
-scikit-learn
-joblib
-matplotlib
